--- a/src/components/Tickets/Tickets.scss
+++ b/src/components/Tickets/Tickets.scss
@@ -1,80 +1,74 @@
-.view{
-   &-buy{
+.view {
+  &-buy {
     // border-right: 1px solid lightgray;
     display: flex;
     flex-direction: column;
     align-items: center;
     width: 200px;
 
-    img{
-        width: 150px;
-        height: 50px;
+    img {
+      width: 150px;
+      height: 50px;
     }
 
-    button{
-        position: irelative;
+    button {
+      position: irelative;
 
-        // &::after{
-        //     content: "\20BD";
-        //     position: absolute;
-        //     top: 96px;
-        //     right: 68px;
-        // }
+      // &::after{
+      //     content: "\20BD";
+      //     position: absolute;
+      //     top: 96px;
+      //     right: 68px;
+      // }
 
-        &.btn{
-            height: 60px;
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            width: 160px;
-            font-size: 18px;
-    
-    
-            &.btn-orange{
-                background: #ff6d00 ;
-                color: white;
-                font-family: 'PT Sans', serif;
-            }
-        }
-    }
-   }
-
-   &-info{
-       width: 370px;
-       height: 140px;
-       display: flex;
-        justify-content: space-around;
+      &.btn {
+        height: 60px;
+        display: flex;
+        justify-content: center;
         align-items: center;
+        width: 160px;
+        font-size: 18px;
 
-
-    .departure_time{
-        position: relative;
-
-        &::after{
-            display: block;                  
-            width:124px;                 
-            content: '';                     
-            position: absolute;           
-            border-bottom: 1px solid lightgrey;   
-            top:60%;                      
-            left: 60px
+        &.btn-orange {
+          background: #ff6d00;
+          color: white;
+          font-family: "PT Sans", serif;
         }
+      }
     }
+  }
 
-   }
+  &-info {
+    width: 370px;
+    height: 140px;
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+
+    .departure_time {
+      position: relative;
+
+      &::after {
+        display: block;
+        width: 124px;
+        content: "";
+        position: absolute;
+        border-bottom: 1px solid lightgrey;
+        top: 60%;
+        left: 60px;
+      }
+    }
+  }
 }
 
-.card{
+.card {
+  &-wrapper {
+    display: flex;
+    justify-content: start;
+    align-items: center;
 
-    &-wrapper{
-        display: flex;
-        justify-content: start;
-        align-items: center;
-
-        
-
-        .card{
-            border-radius: 0.20rem;
-        }
+    .card {
+      border-radius: 0.2rem;
     }
+  }
 }
