--- a/src/components/Tickets/Tickets.scss
+++ b/src/components/Tickets/Tickets.scss
@@ -5,6 +5,7 @@
     flex-direction: column;
     align-items: center;
     width: 200px;
+    height: 115px;
 
     img{
         width: 150px;
@@ -41,7 +42,7 @@
 
    &-info{
        width: 370px;
-       height: 140px;
+       height: 150px;
        display: flex;
         justify-content: space-around;
         align-items: center;
@@ -75,6 +76,18 @@
 
         .card{
             border-radius: 0.20rem;
+            margin-top: 24px;
+
+            .card-body{
+
+                .positioned{
+                    display: flex;
+                    align-items: center;
+                }
+            }
         }
+        
     }
+
+
 }
